Update DiscordBot.java